Expand a saga's declared sealed event type into its concrete types
A saga declaring a sealed supertype subscribed on the CloudEvent type of
the supertype itself, which no stored event has, so it received nothing
and looked like it was still waiting. Every layer below the filter already
accepts a supertype on purpose, through TypeDispatch and isInstance, so
only the filter derivation disagreed.

EventTypeExpansion walks getPermittedSubclasses transitively and unions
the concrete types into eventTypes(), keeping the declared type so a
mapper that collapses a hierarchy still works. A declared type that is
never stored under its own name and whose subtypes cannot all be found is
refused when the saga is built, which covers a plain interface, an
abstract class that is not sealed, and a sealed hierarchy reopened by a
plain abstract class inside it.

Saga.Builder.build, Saga.create and FlowSaga.Builder.build all call it, so
the core builder, on(Class, ...) and a window condition are covered at the
one place they share. Expansion runs before the correlation check, so a
type only received through a declared supertype needs a correlation too.

See ADR 124 and #743.